add getUserById and getMessagesWithChooseUser
